[gd_scene load_steps=3 format=3 uid="uid://b2lnb1ahqf46g"]

[ext_resource type="Script" path="res://entities/enemies/activation-area/enemy_activation_area.gd" id="1_tsea0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aawsa"]
radius = 40.0

[node name="EnemyActivationArea" type="Area2D"]
collision_layer = 18
collision_mask = 4
script = ExtResource("1_tsea0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_aawsa")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
